# -Needleman-Wunsch-alignment

./: LICENSE  README.md
cpp/: README.md
cpp/Needleman-Wunsch-Alignment/: CMakeLists.txt
cpp/Needleman-Wunsch-Alignment/src/: CMakelists.txt  Needleman-Wunsch-Alignment.cpp  Needleman-Wunsch-Alignment.h
cpp/Needleman-Wunsch-Alignment/test/: CMakelists.txt  Needleman-Wunsch-Alignment-Tests.cpp
ruby/: NeedlemanWunschAlign.rb  README.md
ruby/test/: NeelemanWunschAlignTests.rb
